--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
     <head>
-      <title>Title of the document</title>
+      <title>My Titel</title>
     </head>
     
     <body>
-      <h1>This is a heading</h1>
-      <p>This is a paragraph.</p>
     </body>
     
     </html> 
