--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     </head>
     
     <body>
-        <p>salu</p>
+      <h1>This is a heading</h1>
+      <p>This is a paragraph.</p>
+      <p>This is second paragraph.</p>
     </body>
     
     </html> 
